  instead of to the managing Task.

* Incorrect task name with invalid "javac" task after a "presetdef.
  Bugzilla reports 31389 and 29499.
  
* <manifest> was not printing warnings about invalid manifest elements.
  Bugzilla report 32190

* <replace> got out of memory on large files (part of report 32566). 
  <replace> can now handle files as long as there is enough disk space
  available.


Other changes:
--------------

* <echoproperties> now (alphanumerically) sorts the property list
  before echoing, when you request XML output (format="xml"). 

* Changed default tempdir for <javac> from user.dir to java.io.tmpdir.

* A new base class DispatchTask has been added to facilitate elegant 
  creation of tasks with multiple actions.

* Major revision of <wsdltodotnet>. Supports mono wsdl and the microsoft
  wsdl run on mono, as well as most of the .NET WSE2.0 options. Extra
  schemas (files or urls) can be named in the <schema> element.
  Compilers can be selected using the compiler attribute, which defaults
  to "microsoft" on windows, and "mono" on everything else.

* It is now possible to specify the pattern created/parsed by <checksum>.
  Bugzilla Report 16539.

* Added searchpath attribute to <exec> for searching path variable(s)
  when resolveexecutable = true.

* Added -nouserlib option to allow running ant without automatically loading
  up ${user.dir}/.lib/ant. This is useful when compiling ant, and antlibs.
  Modified the build.sh and build.bat to use the option.

* Added -noclasspath option to allow running ant WITHOUT using CLASSPATH env
  variable. Modified ant.bat to do this so that %CLASSPATH% is not looked at.

* Added revision and userid attributes to <pvcs> documentation.

* Added a new "failall" value for the onerror attribute of <typedef>.
  Bugzilla report 31685.

* New task <getlibraries> can retrieve library files from a maven repository.

* unzip/unwar/unjar/untar now supports a nested mapper, which lets you unzip
  in useful ways.
